<resources>
    <string name="app_name">Pokemon Go Alerts</string>

    <string name="api_users">https://stud.hosted.hr.nl/0854091/pogoalerts/users/</string>
    <string name="api_calls">https://stud.hosted.hr.nl/0854091/pogoalerts/calls/</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="username">Username</string>
    <string name="level">Level</string>
    <string name="team">Team</string>

    <string name="login_submit_button">Log in</string>
    <string name="create_group_button">Create group</string>
    <string name="go_to_overview_button">Overview</string>
    <string name="go_to_maps_button">Go to map</string>
    <string name="call_continue_button">Continue</string>
    <string name="check_location_button">Location</string>
    <string name="join_lobby_button">Join</string>

    <string name="home_title_text">Welcome</string>

    <string-array name="team">
        <item>Mystic</item>
        <item>Instinct</item>
        <item>Valor</item>
    </string-array>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_create_call">CreateCallActivity</string>
    <string name="title_activity_call_detail">CallDetailActivity</string>
</resources>
