<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kalok.pokemongoalerts.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:id="@+id/homeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:text="@string/home_title_text"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/title_font_size"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/createGroupButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:text="@string/create_group_button"
        android:layout_marginBottom="8dp"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintBottom_toTopOf="@+id/gotoOverviewButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/homeTitleTextView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/gotoOverviewButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:text="@string/go_to_overview_button"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintBottom_toTopOf="@+id/goToMapsButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/goToMapsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:text="@string/go_to_maps_button"
        android:textSize="@dimen/title_font_size"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="244dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
