<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kalok.pokemongoalerts.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:ems="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:ems="10"
        android:textSize="@dimen/login_font_size"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="0.132" />

    <EditText
        android:id="@+id/levelEditText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:ems="10"
        android:textSize="@dimen/login_font_size"
        android:hint="@string/level"
        android:inputType="number"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <TextView
        android:id="@+id/teamTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:text="@string/team"
        android:textSize="@dimen/login_font_size"
        tools:layout_editor_absoluteY="190dp"
        android:gravity="center"
        app:layout_constraintRight_toLeftOf="@+id/teamSpinner"
        android:layout_marginRight="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/levelEditText" />

    <Spinner
        android:id="@+id/teamSpinner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:ems="10"
        android:textSize="@dimen/login_font_size"
        android:entries="@array/team"
        android:inputType="text"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/levelEditText"
        app:layout_constraintHorizontal_bias="0.698"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/row_height"
        android:ems="10"
        android:textSize="@dimen/login_font_size"
        android:text="@string/login_submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="119dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

</android.support.constraint.ConstraintLayout>
